# baysis

./: .gitignore  CMakeLists.txt  README.md  baysis.cpp
baysis/: accumulator.hpp  algorithms.hpp  baysisexception.hpp  dataprovider.hpp  filterschemes.cpp  filterschemes.hpp  h5bridge.cpp  h5bridge.hpp  h5support.cpp  h5support.hpp  ifactories.hpp  matsupport.hpp  models.cpp  models.hpp  paramgenerators.hpp  probsupport.hpp  samplingschemes.cpp  samplingschemes.hpp  schemes.cpp  schemes.hpp  utilities.hpp
data/: README.md
experiments/: main.cpp  pybridge.cpp
notebooks/: bridge.py  cppbridge.py  experiments_lingauss.ipynb  experiments_nonlinear.ipynb  experiments_parametrized.ipynb  mcmc_analytics.py  models.ipynb  numericaltests.ipynb  params_inference.ipynb  params_inference_bp.ipynb  params_inference_lg.ipynb  params_inference_lp.ipynb  params_summary.ipynb  sampling_bimodal.ipynb  sampling_linpoiss.ipynb  sampling_nonlinear.ipynb  testing_samplers.ipynb  utils.py
python/bindings/: decltypes.pxd  pyapi.pyx  pybridge.cpp  setup.py
python/bindings/eigency/: __init__.py  core.pxd
src/: accumulator.cpp  accumulator.hpp  algorithms.hpp  baysis.cpp  baysisexception.hpp  datagen.cpp  dataprovider.hpp  filterschemes.hpp  h5bridge.cpp  h5bridge.hpp  kalman.cpp  matsupport.hpp  models.cpp  models.hpp  paramgenerators.hpp  probsupport.hpp  samplingschemes.hpp  utilities.hpp
tests/: lingauss.cpp  testing.cpp
