cmake_minimum_required(VERSION 3.19)
project(Baysis)

set(CMAKE_CXX_STANDARD 14)
set (FIND_HDF_COMPONENTS C CXX shared)
set(ENV{HDF5_DIR} /Users/HomeOffice/Downloads/CMake-hdf5-1.10.7/HDF5-1.10.7-Darwin/HDF_Group/HDF5/1.10.7/share/cmake/hdf5)
#set(CMAKE_IGNORE_PATH /Applications/anaconda3/lib)

find_package (Eigen3 3.3 REQUIRED NO_MODULE)
find_package(OpenMP)
find_package (HDF5 NAMES "hdf5" COMPONENTS ${FIND_HDF_COMPONENTS})

if (HDF5_FOUND)
    if (HDF5_shared_C_FOUND)
        set (LINK_LIBS ${LINK_LIBS} ${HDF5_C_SHARED_LIBRARY})
    endif ()
    if (HDF5_shared_CXX_FOUND)
        set (LINK_LIBS ${LINK_LIBS} ${HDF5_CXX_SHARED_LIBRARY})
    endif ()
else ()
    message (FATAL_ERROR " HDF5 is Required")
endif ()

INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIR})
INCLUDE_DIRECTORIES(extern/)

add_executable(Baysis baysis.cpp baysis/filterschemes.cpp baysis/models.cpp)
add_executable(Lingauss tests/lingauss.cpp)
if(OpenMP_CXX_FOUND)
    target_link_libraries(Baysis OpenMP::OpenMP_CXX)
    target_link_libraries (Lingauss OpenMP::OpenMP_CXX)
endif()
target_link_libraries (Baysis Eigen3::Eigen)
target_link_libraries (Lingauss Eigen3::Eigen)
target_link_libraries (Baysis ${LINK_LIBS})
target_link_libraries (Lingauss ${LINK_LIBS})

