cmake_minimum_required(VERSION 3.19)
project(Baysis)

set(CMAKE_CXX_STANDARD 14)
set (FIND_HDF_COMPONENTS C CXX shared)
set(ENV{HDF5_DIR} /Applications/HDF_Group/HDF5/1.10.7/share/cmake/hdf5)
#set(CMAKE_IGNORE_PATH /Applications/anaconda3/lib)

find_package (Eigen3 3.3 REQUIRED NO_MODULE)
find_package(OpenMP)
find_package (HDF5 NAMES "hdf5" COMPONENTS ${FIND_HDF_COMPONENTS})

if (HDF5_FOUND)
    if (HDF5_shared_C_FOUND)
        set (LINK_LIBS ${LINK_LIBS} ${HDF5_C_SHARED_LIBRARY})
    endif ()
    if (HDF5_shared_CXX_FOUND)
        set (LINK_LIBS ${LINK_LIBS} ${HDF5_CXX_SHARED_LIBRARY})
    endif ()
else ()
    message (FATAL_ERROR " HDF5 is Required")
endif ()

INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIR})
INCLUDE_DIRECTORIES(extern/)

add_executable(Baysis baysis/models.cpp baysis/filterschemes.cpp baysis/accumulator.cpp baysis/h5bridge.cpp baysis.cpp)
add_executable(Testing tests/testing.cpp)
if(OpenMP_CXX_FOUND)
    target_link_libraries(Baysis OpenMP::OpenMP_CXX)
endif()
target_link_libraries (Baysis Eigen3::Eigen)
target_link_libraries(Testing Eigen3::Eigen)
target_link_libraries (Baysis ${LINK_LIBS})
target_link_libraries (Testing ${LINK_LIBS})

